fix modal on mobile

--- a/src/scss/contact-us.scss
+++ b/src/scss/contact-us.scss
@@ -144,7 +144,7 @@
     }
     @include tablet_sm {
       padding: 32px 24px;
-      height: calc(100vh - 216px);
+      height: calc(100vh - 300px);
       overflow-y: scroll;
       scrollbar-color: #D5DCE2 #FFFFFF;
       scrollbar-width: auto;
