--- a/src/scss/form-elements.scss
+++ b/src/scss/form-elements.scss
@@ -233,6 +233,7 @@
   @include mobile_md {
     max-width: 100%;
     width: 100%;
+    margin-bottom: 12px;
   }
 }
 
